@startuml
!include ../.PlantUMLClass.config

skinparam nodesep 50

class Regex <<utility>> {
    + {static} DIVIDER_REGEX: String
}

class Message <<utility>> {
    + {static} GREETING_MESSAGE: String
    + {static} EXIT_MESSAGE: String
}

class Ui {
    - in: Scanner
    + greetUser(): void
    + sayGoodbye(): void
    + getUserInput(): String
    + {static} printList(arrayList: ArrayList<T>, columns ArrayList<PrintColumn<T>>): void
}
note right of Ui : Also contains many methods to print a message to the user

class AuthorList {
    + {static} authorColumnsToPrint(): ArrayList<PrintColumn<Author>>
}

class MangaList {
    + {static} mangaColumnsToPrint(includeDeadline: boolean, includeSales: boolean): ArrayList<PrintColumn<Manga>>
}

class Author {
    - authorName: String
    + getAuthorName(): String
}

class Manga {
    - mangaName: String
    - deadline: String
    + getMangaName(): String
    + getDeadline(): String
    + getSalesData(): Sale
}

class Sale {
    - quantitySold: Integer
    - unitPrice: Double
    + getQuantitySold(): Integer
    + getUnitPrice(): Double
    + getTotalRevenue(): Double
}

class PrintColumn<T> {
    - header: String
    - width: int
    - valueProvider: Function<T, String>
    + getHeader(): String
    + getWidth(): int
    + getValue(object: T): String
}

Regex <. Ui : uses
Message <. Ui : uses

Ui ..> AuthorList : prints >
Ui ..> MangaList : prints >

MangaList o-- "*" Manga : comprises of >
MangaList .l.> "\t\r2..6" PrintColumn: specifies print configuration for Ui >

AuthorList o-- "*" Author : comprises of >
AuthorList .r.> "2\r" PrintColumn: specifies print configuration for Ui >

Manga --> "salesData\n0..1" Sale
Manga -l-> "author\n0..1" Author

'PrintColumn .> Manga : gives valueProvider to <
'PrintColumn .> Author : gives valueProvider to <
'PrintColumn ..> Sale : gives valueProvider to <

note "valueProviders are methods that return the String representation of a particular attribute of a class. The are invoked in getValue(). They come from Author/Manga/Sale (e.g. getMangaName(), getTotalRevenue())" as valueProviderNote
PrintColumn .d.. valueProviderNote

@enduml